[package]
name = "chat"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.37.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
dotenvy = "0.15.7"
anyhow = "1.0.82"
axum = "0.7.5"
futures-core = "0.3.30"
async-broadcast = "0.7.1"
async-stream = "0.3.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tower-http = { version = "0.5.2", features = ["cors"] }
